--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,29 +6,53 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@null"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name="com.dagwaging.rosewidgets.widget.RoseWidgetProvider" >
+        <receiver
+            android:name="com.dagwaging.rosewidgets.netreg.widget.RoseWidgetProvider"
+            android:label="@string/widget_name_netreg" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/widget_info" />
+                android:resource="@xml/widget_info_netreg" />
+        </receiver>
+        <receiver
+            android:name="com.dagwaging.rosewidgets.db.widget.RoseWidgetProvider"
+            android:label="@string/widget_name_db" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info_db" />
         </receiver>
 
-        <service android:name="com.dagwaging.rosewidgets.widget.UpdateService" >
+        <service android:name="com.dagwaging.rosewidgets.netreg.widget.UpdateService" >
+        </service>
+        <service android:name="com.dagwaging.rosewidgets.db.widget.UpdateService" >
         </service>
 
         <activity
-            android:name="com.dagwaging.rosewidgets.activities.ConfigurationActivity"
+            android:name="com.dagwaging.rosewidgets.netreg.activities.ConfigurationActivity"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.Holo.Light.Panel" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.dagwaging.rosewidgets.db.activities.ConfigurationActivity"
             android:excludeFromRecents="true"
             android:theme="@android:style/Theme.Holo.Light.Panel" >
             <intent-filter>
